--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: compress
         <div class="container animated fadeIn">
             <div class="row">
                     <a href="{{ site.url }}">
-                        <img src="assets/img/PicsArt_01-22-05.30.30 (1).jpg" >
+                        <img src="assets/img/PicsArt_01-22-05.30.30 (1).jpg" width =256 height =256 >
                     </a>
                     <h3 class="title">
                         <a class="zoombtn" href="Malory Dodge">
